# Blustock

./: .gitignore  LICENCIA.es.txt  README.es.md  README.md  README.txt  mija.txt  pyproject.toml  ventana.py  ventana.ui
blustock/: Untitled-1.py  boton.py  comentario xd.txt  core.py  login.py  main.py  misc.py  styles.qss
blustock/UIs/: Agregar_Herramienta_Submenu.ui  Agregar_Subgrupo_Submenu.ui  Gestion_Movimientos_Herramientas.ui  Gestion_Usuarios.ui  Gestion_administradores.ui  Gestion_alumnos.ui  Gestion_alumnos_hist.ui  Gestion_grupos.ui  Gestion_herramientas.ui  Gestion_profesores.ui  Gestion_profesores_hist.ui  Gestion_solicitudes.ui  Gestion_subgrupos.ui  Gestion_turnos.ui  Historial_cambios.ui  Plantilla.ui
blustock/app_panol/: ingreso_panol.py
blustock/dal/: dal.py
blustock/db/: bbdd.py  bdd.py  blustock.sql  blustock.sqlite3  blustock.sqlite3-journal  duraam.sqlite3  duraam_LOCAL_146.sqlite3  inicializar_bbdd.py
blustock/middleware/: stock.sql
blustock/styles/: gestion.qss
blustock/ui/: botones.py  (+7 more)
duraam/: a.py  botones.py  cabecera.py  cambiar_icono.py  clasetresdelseis.py  crypt.py  cursos.py  gestion.qss  gestion_0de_turno.py  gestion_herramientas.py  gestion_herramientas2.py  gestion_turno.py  interfaz-grafica-ingles.py  interfaz-grafica.py  main.py  main.py.orig  main_panol.py  menu_izquierdo.py  mostrarMensaje  mostrar_contrasena.py  mostrar_mensaje.py  nuevaFuncion.py  panol.py  pass.py  registrar_cambios.py  show_password.py  tpprogramacion24-06.py  user_info.py
proyecto-panol/: db.py  nuevaFuncion.py
proyecto-taller/: crypt.py
(+165 files in other folders)
